final version of the static website project

--- a/static Websites/Fashion Blog/index.html
+++ b/static Websites/Fashion Blog/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <h1>Fashion Blog</h1>
-    <ul>
-        <li><a href="./dress_catalog.html">Check out the available dresses</a></li>
-        <li><a href="./bag_catalog.htmls">Check out the available bags</a></li>
-        <li><a href="./about_us.html">About Us</a></li>
-    </ul>
-    <div>
+    <div id="menu">
+        <ul>
+            <li><a href="./dress_catalog.html">Check out the available dresses</a></li>
+            <li><a href="./bag_catalog.html">Check out the available bags</a></li>
+            <li><a href="#about_us">About Us</a></li>
+
+        </ul>
+    </div>
+    <div id="teaser">
         <h2>Latest Releases</h2>
         <p>
             Fall isnt near, its here. And, expectedly, so are new fashion launches, 
@@ -21,6 +24,35 @@
             Helena Christensens new collection for Hunza G, and a timely exhibition at The Jewish Museum honoring Chloés founder Gaby Aghion, 
             here is the best of October.
         </p>
+    </div>
+    <div>
+        <!--- THIS iframe element is for youtube videos -->
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/ZrC8J8hG2pU" frameborder="0" allowfullscreens>
+            Video not supported
+        </iframe>
+    </div>
+    <div id="about_us">
+        <h2>About Us</h2>
+        <p>
+            We are a fashion blog that is dedicated to bringing you the latest fashion trends. <br>
+            We are a small team of fashion enthusiasts that are dedicated to bringing you the latest <em>fashion trends</em>. <br>
+            In the ever-evolving world of fashion, we stand as your trusted guides, 
+            navigating through the realms of style to bring you a curated collection of what's hot, 
+            what's unique, and what's bound to make you stand out. <br>
+            Our small yet dedicated team of fashion enthusiasts is driven by a singular purpose
+            to ignite the spark of creativity in your wardrobe and empower you with the confidence that comes from expressing your unique style. <br>
+            <strong>stylish, stay inspired!</strong> 
+        </p>
+        <img src="https://videohive.img.customer.envatousercontent.com/files/439156017/PreviewImage.png?auto=compress%2Cformat&fit=crop&crop=top&max-h=8000&max-w=590&s=5b66eadab7b83b8ea4924c1d57fde5eb" 
+        alt="just a fashion image">
+    </div>
+    <div id="contacts">
+        
+        <h5>Contacts</h5>
+        <ul>
+            <li>Phone: 123456789</li>
+            <li>Email: fashion@gmail.com</li>
+            <li>Address: <a href="https://en.wikipedia.org/wiki/Fashion_Street" target="_blank">1234 Fashion Street</a></li>
     </div>
 </body>
 </html>
